BJS2-26709 only tests to create