@@ -2,7 +2,6 @@ package faang.school.postservice.moderation;
 
 import faang.school.postservice.exception.ModerationDictionaryException;
 import jakarta.annotation.PostConstruct;
-import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -10,7 +9,6 @@ import org.springframework.stereotype.Component;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -30,7 +28,7 @@ public class ModerationDictionary {
 
     @PostConstruct
     public void fillSetWithBadWords() {
-        Path path = Paths.get(filePath);
+        Path path = Path.of(filePath);
 
         try (var words = Files.lines(path)) {
             banWords = words
@@ -38,7 +36,9 @@ public class ModerationDictionary {
                     .map(String::toLowerCase)
                     .collect(Collectors.toSet());
         } catch (IOException e) {
-            throw new ModerationDictionaryException("Error during moderation dictionary filling: " + e.getMessage());
+            String errorContent = "Error during moderation dictionary filling: " + e.getMessage();
+            log.error(errorContent);
+            throw new ModerationDictionaryException(errorContent);
         }
     }
 }
